update for uplatex

--- a/common.sty
+++ b/common.sty
@@ -23,7 +23,7 @@
 \ExecuteOptions{}
 \ProcessOptions
 
-\usepackage[bold]{otf}          % OpenType Font
+\usepackage[uplatex,bold]{otf}  % OpenType Font
 \usepackage[T1]{fontenc}        % フォントエンコーディングをT1に
 \usepackage{lmodern}            % Latin Modernフォントを導入
 
