JIS2004指定を行う, uplatex指定はクラスオプションで十分

--- a/common.sty
+++ b/common.sty
@@ -23,7 +23,7 @@
 \ExecuteOptions{}
 \ProcessOptions
 
-\usepackage[uplatex,bold]{otf}  % OpenType Font
+\usepackage[jis2004,bold]{otf}  % OpenType Font
 \usepackage[T1]{fontenc}        % フォントエンコーディングをT1に
 \usepackage{lmodern}            % Latin Modernフォントを導入
 
