--- a/common_macro.sty
+++ b/common_macro.sty
@@ -243,6 +243,8 @@
 	\DeclareMathOperator{\ch}{ch}                       % 指標
 	\DeclareMathOperator{\mult}{mult}                   % 重複度
 	\DeclareMathOperator{\height}{ht}                   % 高さ
+    \DeclareMathOperator{\argmin}{arg\:min}             % 引数最小
+    \DeclareMathOperator{\argmax}{arg\:max}             % 引数最大
 	
 	\newcommand{\vararctan}{\operatorname{Tan}^{\!-1}}  % 逆正接関数
 	\newcommand{\vararcsin}{\operatorname{Sin}^{\!-1}}  % 逆正弦関数
