chores: minor fix

--- a/common_config.sty
+++ b/common_config.sty
@@ -2,8 +2,8 @@
 	\renewcommand{\thefootnote}{\arabic{footnote})}				% footnoteの表示を 1) 形式に
 	\let\division=\div											% 割り算記号の割り当て変更
 	\sisetup{%
-		group-decimal-digits = false,%
-%		group-separator = {,},%
+%		group-digits = false,%
+		group-separator = {,},%
 		output-complex-root =\text{\ensuremath{i}},%
 		separate-uncertainty = true%
 	}
